# PicoDVI-DMG

./: PIO_VIDEO_IMPLEMENTATION.md  QUICK_START_TESTING.md  Readme.md
software/: build.cmd  build_clean.cmd  buildit.cmd
software/apps/: CMakeLists.txt
software/apps/dmg/: CMakeCache.txt  CMakeLists.txt  DIGITAL_TIMING_SUMMARY.md  FRAME_BLENDING.md  FRAME_BLENDING_OPTIMIZATION.md  RESOLUTION_800x600_PACKED_BUFFER_CONVERSION.md  VSYNC_MODE_TOGGLE.md  analog_microphone.c  analog_microphone.h  audio_i2s.pio  audio_timer.pio  colors.c  colors.h  dmg.pio  dmg_buttons.pio  dmg_buttons_simple.pio  dmg_simple.pio  eeprom.c  eeprom.h  emusound.c  emusound.h  font_5x7.c  font_5x7.h  main.c  osd.c  osd.h  pio_audio_timer.c  pio_audio_timer.h  shared_dma_handler.c  shared_dma_handler.h  video_capture.pio  video_capture_user.h  video_defs.h
software/apps/sprite_bounce_audio/: CMakeLists.txt  analog_microphone.c  emusound.c  emusound.h  main.c
software/assets/: mario.h
software/ext/host_files/bluehost-lib/: blue_host.c  blue_host.h
software/ext/host_files/parser-lib/: gamepad_parser.c
software/include/: common_dvi_pin_configs.h
software/libdvi/: CMakeLists.txt  dvi.c  dvi.h  dvi_config_defs.h  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.c  tmds_encode.h
software/libsprite/: sprite_asm_const.h  sprite_riscv.S  tile_riscv.S
